--- a/site.yml
+++ b/site.yml
@@ -99,6 +99,7 @@
     - dev/gui/hex-fiend
     - dev/gui/intellij-idea
     - dev/gui/kaleidoscope
+    - dev/gui/macdown
     - dev/gui/parallels-desktop
     - dev/gui/paw
     - dev/gui/rstudio
