--- a/site.yml
+++ b/site.yml
@@ -55,6 +55,7 @@
     - pvt/gui/gpgtools-beta
     - pvt/gui/iterm2-beta
     - pvt/gui/slack
+    - pvt/gui/spaceradar
     - pvt/gui/spotifree
     - pvt/gui/spotify
     - pvt/gui/teamviewer
