--- a/site.yml
+++ b/site.yml
@@ -79,7 +79,8 @@
     - dev/lang/js
     - dev/lang/js-tools
     - dev/lang/python
-    - dev/lang/python-tools
+    - dev/lang/python3
+    - dev/lang/python3-tools
     - dev/lang/r
     - dev/lang/ruby
     - dev/lang/ruby-tools
