--- a/roles/pvt/gui/teamviewer/handlers/main.yml
+++ b/roles/pvt/gui/teamviewer/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: restart teamviewer
-  shell: killall {{item}}
+  shell: killall "{{item}}"
   ignore_errors: true
   with_items:
     - TeamViewer
