Add configuration for htop

--- a/roles/sys/cli/htop/tasks/main.yml
+++ b/roles/sys/cli/htop/tasks/main.yml
@@ -1,3 +1,6 @@
 ---
 - name: install
   homebrew: name=htop install_options=with-ncurses
+
+- name: configure
+  vcsh: name=dotfiles-htop remote=git@github.com:mtneug/dotfiles-htop.git
