--- a/site.yml
+++ b/site.yml
@@ -94,6 +94,7 @@
     - dev/cli/ansible
     - dev/cli/bats
     - dev/cli/cmake
+    - dev/cli/ctop
     - dev/cli/diff-so-fancy
     - dev/cli/git
     - dev/cli/gradle
